--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -55,12 +55,12 @@
                 <li role="presentation" class="active">
                   <a href="#preview" aria-controls="preview" role="tab" data-toggle="tab">output</a></li>
                 <li role="presentation">
-                  <a href="#visualization-container" aria-controls="visualization-container" role="tab" data-toggle="tab">visualization</a></li>
+                  <a href="#visualization-container" aria-controls="visualization-container" role="tab" data-toggle="tab">visualisation</a></li>
               </ul>
             </div>
             <div class="tab-content">
               <div role="tabpanel" class="tab-pane active" id="preview">
-                <html-viewer Viewer.bind="htmlViewer"></html-viewer>
+                <html-viewer></html-viewer>
               </div>
               <div role="tabpanel"  class="tab-pane iframeCssPreview" id="visualization-container">
                 <trace-search search.bind="traceSearch"></trace-search>
