--- a/src/searchTab/trace-search.html
+++ b/src/searchTab/trace-search.html
@@ -1,26 +1,27 @@
 <template bindable="search">
   <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 
-  <div class="w3-row-padding">
-    <div class="w3-col" style="width:90px;">
-      <div class="w3-group">
-        <label class="w3-label">Filter By</label>
-        <select class="w3-select" style="margin-top: 9px;" name="searchFilter" id="searchFilter" value.bind="search.selectedFilter" change.trigger="search.filterChanged()">
-          <option repeat.for="option of search.options" model.bind="option">${option}</option>
-        </select>
-      </div>
-    </div>
-    <div class="w3-quarter">
-      <div class="w3-group">
-        <label class="w3-label">Search Term</label>
-        <input class="w3-input" type="text" name="searchTerm" id="searchTerm" placeholder="a variable name" list="filteredOptions">
-        <datalist repeat.for="expression  of search.rows" id.bind="expression.id" model.bind="expression.id">hello</datalist>
+  <div class="container-fluid">
+    <div class="w3-group">
+      <div class="row">
+        <div class="col-md-4">
+          <label class="w3-label">Filter By</label>
+          <select class="w3-select" style="margin-top: 9px;" name="searchFilter" id="searchFilter" value.bind="search.selectedFilter" change.trigger="search.filterChanged()">
+            <option repeat.for="option of search.options" model.bind="option">${option}</option>
+          </select>
+        </div>
+        <div class="col-md-4">
+          <label class="w3-label">Search Term</label>
+          <input class="w3-input" type="text" name="searchTerm" id="searchTerm" placeholder="a variable name" input.delegate="search.keyPressed()" value.bind="search.searchText">
+        </div>
+        <div class="col-md-4" if.bind="!search.noResult">
+          <br>
+          Number of Search Results: ${search.numberOfResult}
+        </div>
       </div>
     </div>
   </div>
-
-  <div class="container-fluid">
-
+  <div class="container-fluid" if.bind="!search.noResult">
     <table class="table table-striped table-bordered">
       <thead>
         <tr>
@@ -28,10 +29,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr repeat.for="row of search.rows"  mouseover.delegate="search.domouseover({$index})" mouseout.delegate="search.domouseout({$index})" class = "table-hover"  >
-          <!--<td>-->
-          <!--  <input type="checkbox" id="${row.id}" change.delegate="search.addCheckedExpression({$index})" checked.delegate="search.isChecked"></input>-->
-          <!--</td>-->
+        <tr repeat.for="row of search.rows" mouseover.delegate="search.domouseover({$index})" mouseout.delegate="search.domouseout({$index})" class="table-hover">
           <td>${row.id}</td>
           <td>${row.value}</td>
         </tr>
@@ -40,10 +38,8 @@
   </div>
   <div class=" container-fluid">
     <div class="row">
-      <div class="col-md-6 col-offset-2">
-      </div>
-      <div class="col-md-4">
-        <div>Number of Search Results: ${search.numberOfResult}</div>
+      <div class="col-md-12">
+        <div if.bind="search.noResult" class="alert alert-danger" role="alert">No result found</div>
       </div>
     </div>
   </div>
