more cleaning and new not found message, search table V1.0

--- a/src/searchTab/trace-search.html
+++ b/src/searchTab/trace-search.html
@@ -39,7 +39,7 @@
   <div class=" container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <div if.bind="search.noResult" class="alert alert-danger" role="alert">No result found</div>
+        <div if.bind="search.noResult" class="alert alert-danger" role="alert">No results found! Try a different search term with filter option.</div>
       </div>
     </div>
   </div>
