--- a/src/searchTab/trace-search.html
+++ b/src/searchTab/trace-search.html
@@ -12,16 +12,17 @@
         </div>
         <div class="col-md-4">
           <label class="w3-label">Search Term</label>
-          <input class="w3-input" type="text" name="searchTerm" id="searchTerm" placeholder="a variable name" input.delegate="search.keyPressed()">
+          <input class="w3-input" type="text" name="searchTerm" id="searchTerm" placeholder="a variable name" input.delegate="search.keyPressed()" value.bind="search.searchedValue">
         </div>
-        <div class="col-md-4" if.bind="!search.noResult">
+        <div class="col-md-4">
           <br>
-          Number of Search Results: ${search.numberOfResult}
+          <br>
+          <div if.bind="!search.noResult && !search.noSearchYet" >Number of Search Results: ${search.numberOfResult}</div>
         </div>
       </div>
     </div>
   </div>
-  <div class="container-fluid" if.bind="!search.noResult">
+  <div class="container-fluid" if.bind="!search.noResult && !search.noSearchYet">
     <table class="table table-striped table-bordered">
       <thead>
         <tr>
@@ -39,7 +40,8 @@
   <div class=" container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <div if.bind="search.noResult" class="alert alert-danger" role="alert">No results found! Try a different search term with filter option.</div>
+        <div if.bind="search.noResult" class="alert alert-danger" role="alert">No results found! Try a different search term with filter option. The search term is case sensitive.</div>
+        <div if.bind="search.noSearchYet" class="alert alert-info" role="alert">Type any expression to see its value.</div>
       </div>
     </div>
   </div>
