bug fixes for sharing state

--- a/src/visViewer/vis-viewer.html
+++ b/src/visViewer/vis-viewer.html
@@ -10,4 +10,7 @@
             <visualization vis.bind="visualization"></visualization>
         </div>
     </div>
+    
+      <input type="text"/>
+
 </template>
