--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -9,6 +9,8 @@
   <require from="chat/chat.html"></require>
   <require from="searchTab/trace-search.html"></require>
   
+        <input type="text"/>
+
   <div class="container-fluid" style="padding-left: 0px; padding-right: 0px; padding-left: 7px;">
 
     <div id="mainSplitter" class="col-md-7" style="padding-left: 2px; padding-right: 2px">
