--- a/src/searchTab/trace-search.html
+++ b/src/searchTab/trace-search.html
@@ -7,17 +7,21 @@
         <div class="col-md-4">
           <label class="w3-label">Filter By</label>
           <select class="w3-select" style="margin-top: 9px;" name="searchFilter" id="searchFilter" value.bind="search.selectedFilter" change.trigger="search.filterChanged()">
-            <option repeat.for="option of search.options" model.bind="option">${option}</option>
+            <option selected disabled>select a filter</option>
+            <option>${search.options.any}</option>
+            <option>${search.options.id}</option>
+            <option>${search.options.value}</option>
+
           </select>
         </div>
         <div class="col-md-4">
           <label class="w3-label">Search Term</label>
-          <input class="w3-input" type="text" name="searchTerm" id="searchTerm" placeholder="a variable name" input.delegate="search.keyPressed()" value.bind="search.searchedValue">
+          <input class="w3-input" type="text" name="searchTerm" id="searchTerm" placeholder="" input.delegate="search.keyPressed()" value.bind="search.searchedValue">
         </div>
         <div class="col-md-4">
           <br>
           <br>
-          <div if.bind="!search.noResult && !search.noSearchYet" >Number of Search Results: ${search.numberOfResult}</div>
+          <div if.bind="!search.noResult && !search.noSearchYet">Number of Search Results: ${search.numberOfResult}</div>
         </div>
       </div>
     </div>
@@ -26,7 +30,8 @@
     <table class="table table-striped table-bordered">
       <thead>
         <tr>
-          <th repeat.for="head of search.heads" value.bind="head">${head}</th>
+          <th>Id</th>
+          <th>Value</th>
         </tr>
       </thead>
       <tbody>
@@ -40,11 +45,12 @@
   <div class=" container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <div if.bind="search.noResult" class="alert alert-danger" role="alert">No results found! Try a different search term with filter option. The search term is case sensitive.</div>
-        <div if.bind="search.noSearchYet" class="alert alert-info" role="alert">Type any expression to see its value.</div>
+        <div if.bind="search.noResult" class="alert alert-danger" role="alert">${search.errorMessage}</div>
+        <div if.bind="search.noSearchYet" class="alert alert-info" role="alert"> ${search.suggestionMessage}</div>
       </div>
     </div>
   </div>
   </div>
+
   <br>
 </template>
