clickable highlight and dehighlight

--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -73,7 +73,7 @@
           </div>
           <div id="right-splitter-bottom"  class= "flow" >
             <console-window console.bind='consoleWindow'></console-window>
-            <chat chat.bind="chat"></chat>
+            <chat chat.bind="chat" id="link"></chat>
           </div>
         </div>
       </div>
