--- a/src/searchTab/trace-search.html
+++ b/src/searchTab/trace-search.html
@@ -23,6 +23,7 @@
     </div>
   </div>
   <div class="container-fluid" if.bind="!search.noResult && !search.noSearchYet">
+    <a id="link" mouseover.delegate="search.doMouseOver({$index})" mouseout.delegate="search.doMouseOut()" ></a>
     <table class="table table-striped table-bordered">
       <thead>
         <tr>
@@ -30,9 +31,10 @@
         </tr>
       </thead>
       <tbody>
-        <tr repeat.for="row of search.rows" mouseover.delegate="search.doMouseOver({$index})" mouseout.delegate="search.doMouseOut()" class="table-hover">
-          <td>${row.id}</td>
-          <td>${row.value}</td>
+        <tr repeat.for="row of search.rows" mouseover.delegate="search.doMouseOver({$index})" mouseout.delegate="search.doMouseOut({$index})" class="table-hover"
+          id="link" click.delegate="search.doOnClick({$index})"> 
+          <td><a href="#link">${row.id}</a></td>
+          <td><a href="#link">${row.value}</a></td>
         </tr>
       </tbody>
     </table>
@@ -43,6 +45,7 @@
         <div if.bind="search.noResult" class="alert alert-danger" role="alert">No results found! Try a different search term with filter option. The search term is case sensitive.</div>
         <div if.bind="search.noSearchYet" class="alert alert-info" role="alert">Type any expression to see its value.</div>
       </div>
+      
     </div>
   </div>
   </div>
