--- a/src/searchTab/trace-search.html
+++ b/src/searchTab/trace-search.html
@@ -32,9 +32,9 @@
       </thead>
       <tbody>
         <tr repeat.for="row of search.rows" mouseover.delegate="search.doMouseOver({$index})" mouseout.delegate="search.doMouseOut({$index})" class="table-hover"
-          id="link" click.delegate="search.doOnClickJumpToCode({$index})" style="cursor: pointer"> 
+          id="link" click.delegate="search.doOnClickJumpToCode({$index})"> 
           <td><a href="#link" click.delegate="search.doOnClickHighlight({$index})">${row.id}</a></td>
-          <td>${row.value}</td>
+          <td>${row.value}</a></td>
         </tr>
       </tbody>
     </table>
