--- a/src/visViewer/vis-viewer.html
+++ b/src/visViewer/vis-viewer.html
@@ -1,14 +1,15 @@
-<template bindable="vis" >
-  <require from="visualization/visualization.html"></require>
-      	 
-	         <button click.trigger="vis.showVis()" disabled.bind="vis.disable" class="btn btn-info active">show visualization</button>
-
+<template bindable="vis">
+    <require from="visualization/visualization.html"></require>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <button click.trigger="vis.showVis()" disabled.bind="vis.disable" class="btn btn-info active">show visualization</button>
+            </div>
+        </div>
+    </div>
     <div>
-
         <div repeat.for="visualization of vis.visualizations">
             <visualization vis.bind="visualization"></visualization>
         </div>
     </div>
-    
-
 </template>
