adds clear button

--- a/src/visViewer/vis-viewer.html
+++ b/src/visViewer/vis-viewer.html
@@ -4,6 +4,7 @@
         <div class="row">
             <div class="col-md-12">
                 <button click.trigger="vis.showVis()" disabled.bind="vis.disable" class="btn btn-info active">show visualization</button>
+                <button click.trigger="vis.clearSelection()" if.bind="!vis.disable" class="btn btn-danger">clear selections</button>
             </div>
         </div>
     </div>
