bug fixes and getting the code ready for review

--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -56,7 +56,7 @@
                 <li role="presentation" class="active">
                   <a href="#preview" aria-controls="preview" role="tab" data-toggle="tab">output</a></li>
                 <li role="presentation">
-                  <a href="#visualization-container" aria-controls="visualization-container" role="tab" data-toggle="tab">visualisation</a></li>
+                  <a href="#visualization-container" aria-controls="visualization-container" role="tab" data-toggle="tab">visualization</a></li>
               </ul>
             </div>
             <div class="tab-content">
