--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -17,11 +17,11 @@
           <div role="tabpanel">
             <ul class="nav nav-tabs">
               <li role="presentation" class="active">
-                <a href="#js-container" aria-controls="js-container" role="tab" data-toggle="tab">js</a></li>
+                <a href="#js-container" aria-controls="js-container" role="tab" data-toggle="tab">JS</a></li>
               <li role="presentation">
-                <a href="#html-container" aria-controls="html-container" role="tab" data-toggle="tab">html</a></li>
+                <a href="#html-container" aria-controls="html-container" role="tab" data-toggle="tab">HTML</a></li>
               <li role="presentation">
-                <a href="#css-container" aria-controls="css-container" role="tab" data-toggle="tab">css</a></li>
+                <a href="#css-container" aria-controls="css-container" role="tab" data-toggle="tab">CSS</a></li>
             </ul>
           </div>
         </div>
@@ -53,9 +53,9 @@
             <div role="tabpanel">
               <ul class="nav nav-tabs">
                 <li role="presentation" class="active">
-                  <a href="#preview" aria-controls="preview" role="tab" data-toggle="tab">output</a></li>
+                  <a href="#preview" aria-controls="preview" role="tab" data-toggle="tab">Output</a></li>
                 <li role="presentation">
-                  <a href="#visualization-container" aria-controls="visualization-container" role="tab" data-toggle="tab">visualization</a></li>
+                  <a href="#visualization-container" aria-controls="visualization-container" role="tab" data-toggle="tab">Visualization</a></li>
               </ul>
             </div>
             <div class="tab-content">
