--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -53,7 +53,8 @@
       <div id="main-splitter-right">
         
         <div id="rightSplitter" class="col-md-5" style="padding-left: 2px; padding-right: 2px">
-          <share share.bind="share"></share>
+          <!--<share share.bind="share"></share>-->
+          <div></div>
           <div id="right-splitter-top">
           <div id="right-splitter-top" class = "flow">
             <div role="tabpanel">
