first time trace search history bull value considered

--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -54,8 +54,7 @@
         
         <div id="rightSplitter" class="col-md-5" style="padding-left: 2px; padding-right: 2px">
           <!--<share share.bind="share"></share>-->
-          <div></div>
-          <div id="right-splitter-top">
+          <!--<div id="right-splitter-top">-->
           <div id="right-splitter-top" class = "flow">
             <div role="tabpanel">
               <ul class="nav nav-tabs">
