--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -8,7 +8,7 @@
   <require from="consoleWindow/console-window.html"></require>
   <require from="chat/chat.html"></require>
   <require from="share/share.html"></require>
-
+  <require from="tracePlay/play.html"></require>
   <require from="searchTab/trace-search.html"></require>
   
   <div class="container-fluid" style="padding-left: 0px; padding-right: 0px; padding-left: 7px;">
