--- a/src/tracePlay/play.html
+++ b/src/tracePlay/play.html
@@ -5,21 +5,21 @@
     </div>
     <div class="panel panel-default">
         <div class="panel-heading">
-          <b>TracePlay widget</b>
+          <b>Trace Player</b>
         </div>
     <div class="panel-body">
         
         <div class="row">
-            <div class="col col-sm-1">
+            <div class="col col-sm-2">
                 <button class="btn btn-primary btn-block" id="prev">Previous</button>
             </div>
-            <div class="col col-sm-1">
+            <div class="col col-sm-2">
                 <button class="btn btn-success btn-block" id="play">Play</button>
             </div>
-            <div class="col col-sm-1">
+            <div class="col col-sm-2">
                 <button class="btn btn-primary btn-block" id="next">Next</button>
             </div>
-            <div class="col col-sm-1">
+            <div class="col col-sm-3">
                 <button class="btn btn-warning btn-block" id="remove" data-toggle="tooltip" data-placement="top">Hide Tooltip</button>
             </div>
         </div>
