Added delay to Chat so it does not cause draggable() to be undefined. edited README

--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -9,7 +9,7 @@
   <require from="consoleWindow/console-window.html"></require>
   <require from="chat/chat.html"></require>
   <require from="tracePlay/play.html"></require>
-  <require from="searchTab/trace-search.html"></require>
+  <require from="traceSearch/trace-search.html"></require>
   
 
   <div class="container-fluid" style="padding-left: 0px; padding-right: 0px; padding-left: 7px;">
