Added persistence layer. Solved deployment issues

--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -12,7 +12,7 @@
   <require from="traceSearch/trace-search.html"></require>
   
 
-  <div class="container-fluid" style="padding-left: 0px; padding-right: 0px; padding-left: 7px;">
+  <div id = "mainContainer"class="container-fluid" style="padding-left: 0px; padding-right: 0px; padding-left: 7px;">
 
     <div id="mainSplitter" class="col-md-7" style="padding-left: 2px; padding-right: 2px">
       <div id="main-splitter-left">
@@ -51,7 +51,7 @@
         </div>
       </div>
         
-      <div id="main-splitter-right">
+      <div id="main-splitter-right" >
         
         <div id="rightSplitter" class="col-md-5" style="padding-left: 2px; padding-right: 2px">
           <div id="right-splitter-top" class = "flow">
