--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>SeeCode.Run</title>
 	<link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+	<link rel="stylesheet" href="styles/w3.css" />
 	<link rel="stylesheet" href="styles/jqx.base.css" />
 	<link rel="stylesheet" href="styles/styles.css">
 	<link rel="stylesheet" href="styles/chat.css">
@@ -23,13 +24,9 @@
 	<script>
 		System.import('aurelia-bootstrapper');
 	</script>
-
-	<!-- Firebase -->
+	
 	<script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
-
-	<!-- ACE and its JavaScript mode and theme files -->
 	<script src="https://ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js"></script>
-	<!-- Firepad -->
 	<script src="https://cdn.firebase.com/libs/firepad/1.3.0/firepad.js"></script>
 
 </body>
