added user list. improved UI

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 	<title>SeeCode.Run</title>
 	<link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="styles/w3.css" />
+	<link rel="stylesheet" href="styles/nav-bar.css" />
 	<link rel="stylesheet" href="styles/jqx.base.css" />
+	<link rel="stylesheet" href="styles/firepad-user-list.css" />
 	<link rel="stylesheet" href="styles/styles.css">
 	<link rel="stylesheet" href="styles/chat.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
