--- a/src/consoleWindow/console-window.html
+++ b/src/consoleWindow/console-window.html
@@ -1,9 +1,8 @@
 <template bindable="console">
- 
-        <div repeat.for="output of console.log">
-            ${output}
-        </div>
-
-
+    <span class='glyphicon glyphicon-console'></span>
+    <br>
+    <div repeat.for="output of console.log">
+        ${output}
+    </div>
 </template>
 
