--- a/src/tracePlay/play.html
+++ b/src/tracePlay/play.html
@@ -10,16 +10,16 @@
         
         <div class="row">
             <div class="col col-sm-2">
-                <button class="btn btn-primary btn-block" id="prev">Previous</button>
+                <button class="btn btn-primary btn-block" id="prev" title="Previous"><span class='glyphicon glyphicon-backward'></span></button>
             </div>
             <div class="col col-sm-2">
-                <button class="btn btn-success btn-block" id="play">Play</button>
+                <button class="btn btn-success btn-block" id="play" title="Auto-Play pr pause the collected trace"><span class='glyphicon glyphicon-play'></span></button>
             </div>
             <div class="col col-sm-2">
-                <button class="btn btn-primary btn-block" id="next">Next</button>
+                <button class="btn btn-primary btn-block" id="next" title="Next"><span class='glyphicon glyphicon-forward'></span></button>
             </div>
             <div class="col col-sm-3">
-                <button class="btn btn-warning btn-block" id="remove" data-toggle="tooltip" data-placement="top">Hide Tooltip</button>
+                <button class="btn btn-warning btn-block" id="remove" data-toggle="tooltip" data-placement="top" title="Hide Tooltip"><span class='glyphicon glyphicon-eye-close'></span></button>
             </div>
         </div>
     </div>
