added res folder. improved navigation bar. Initial sections icons added. new css file structure added. bundling and expoting updated

--- a/src/chat/chat.html
+++ b/src/chat/chat.html
@@ -1,5 +1,5 @@
 <template bindable="chat">
-
+<require from="./chat.css"></require>
   <div id="chatDiv" class="seecoderun-chat l-demo-container" >
     <div class="seecoderun-chatHeader">
       <header>SeeCode.Run Chat</header>
