--- a/src/tracePlay/play.html
+++ b/src/tracePlay/play.html
@@ -19,7 +19,7 @@
                 <button class="btn btn-primary btn-block" id="next" title="Next"><span class='glyphicon glyphicon-forward'></span></button>
             </div>
             <div class="col col-sm-3">
-                <button class="btn btn-warning btn-block" id="remove" data-toggle="tooltip" data-placement="top" title="Hide Tooltip"><span class='glyphicon glyphicon-eye-close'></span></button>
+                <button class="btn btn-warning btn-block" id="remove" data-toggle="tooltip" data-placement="top" title="Hide Tooltip"><span class='glyphicon glyphicon-eye-open'></span></button>
             </div>
         </div>
     </div>
