--- a/src/app.html
+++ b/src/app.html
@@ -1,8 +1,8 @@
 <template>
-  <require from="layout/nav-bar.html"></require>
+  <require from="layout/navigationBar/navigation-bar.html"></require>
   <require from="bootstrap/css/bootstrap.css"></require>
  
-  <nav-bar router.bind="router"></nav-bar>
+  <navigation-bar router.bind="router"></navigation-bar>
 
   <div class="page-host">
     <router-view></router-view>
