--- a/src/jsGutter/js-gutter.html
+++ b/src/jsGutter/js-gutter.html
@@ -1,3 +1,4 @@
-<template bindable="gutter">
-	 <div  class= "iframeCss" id="gutter" scroll.trigger="gutter.publish($event)" style="height: 700px"></div>
+<template bindable="jsGutter">
+<require from="./js-gutter.css"></require>
+	 <div id="gutter" class= "js-gutter" ></div>
 </template>
