--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 
 <head>
 	<title>SeeCode.Run</title>
-	<link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		
 	<link rel="stylesheet" href="styles/w3.css" />
-	<link rel="stylesheet" href="styles/jqx.base.css" />
-	<link rel="stylesheet" href="styles/firepad-user-list.css" />
 	<link rel="stylesheet" href="styles/styles.css">
+	
+	<link rel="stylesheet" href="styles/split.js.css" />
+	<link rel="stylesheet" href="styles/firepad-user-list.css" />
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -25,11 +27,13 @@
 	<script>
 		System.import('aurelia-bootstrapper');
 	</script>
-	
+
 	<script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
 	<script src="https://ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js"></script>
 	<script src="https://cdn.firebase.com/libs/firepad/1.3.0/firepad.js"></script>
-
+	
+	<script src="include/pure-js-pre-loader.js"></script>
+	<script src="include/split.js"></script>
 </body>
 
 </html>
