--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,7 @@
 <template>
-  <require from="layout/navigationBar/navigation-bar.html"></require>
   <require from="bootstrap/css/bootstrap.css"></require>
- 
+  <require from="font-awesome/css/font-awesome.css"></require>
+  <require from="layout/navigationBar/navigation-bar.html"></require>
   <navigation-bar router.bind="router"></navigation-bar>
 
   <div class="page-host">
