--- a/src/traceSearch/trace-search.html
+++ b/src/traceSearch/trace-search.html
@@ -1,58 +1,57 @@
 <template bindable="search">
-  <div class="container-fluid">
-    <div class="w3-group">
+  <div class="panel panel-default">
+    <div class="panel-heading" data-toggle="collapse" href="#traceSearchPanelBody">
+            <span class='glyphicon glyphicon-search'></span>Trace Search
+    </div>
+    <div id="traceSearchPanelBody" class="panel-body">
+      <div class="w3-group">
+        <div class="row">
+          <div class="col-md-4">
+            <label class="w3-label">Filter By</label>
+            <select class="w3-select"  name="searchFilter" id="searchFilter" value.bind="search.selectedFilter" change.trigger="search.filterChanged()">
+              <option selected disabled>select a filter</option>
+              <option>${search.options.none}</option>
+              <option>${search.options.any}</option>
+              <option>${search.options.id}</option>
+              <option>${search.options.value}</option>
+            </select>
+          </div>
+          <div class="col-md-4">
+            <label class="w3-label">Search Term</label>
+            <input class="w3-input" type="text" name="searchTerm" id="searchTerm" placeholder="" input.delegate="search.keyPressed()" value.bind="search.searchedValue" list = "filteredOptions"> 
+              <datalist id="filteredOptions" > <option repeat.for="row of search.filteredOptions" innerHTML.bind="row"></option> </datalist>
+          </div>
+          <div class="col-md-4">
+            <div if.bind="!search.noResult && !search.noSearchYet">Number of Search Results: ${search.numberOfResult}</div>
+          </div>
+        </div>
+      </div>
+    <div class="container-fluid" if.bind="!search.noResult && !search.noSearchYet">
+      <a id="link" mouseover.delegate="search.doMouseOver({$index})" mouseout.delegate="search.doMouseOut()" ></a>
+      <table class="table table-striped table-bordered">
+        <thead>
+          <tr>
+            <th>Id</th>
+            <th>Value</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr repeat.for="row of search.rows" mouseover.delegate="search.doMouseOver({$index})" mouseout.delegate="search.doMouseOut({$index})" class="table-hover"
+            id="link" click.delegate="search.doOnClickJumpToCode({$index})"> 
+            <td innerHTML.bind="row.id"><a href="#link" click.delegate="search.doOnClickHighlight({$index})"></a></td>
+            <td innerHTML.bind="row.value"><a href="#link" click.delegate="search.doOnClickHighlight({$index})"></a></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class=" container-fluid">
       <div class="row">
-        <div class="col-md-4">
-          <label class="w3-label">Filter By</label>
-          <select class="w3-select"  name="searchFilter" id="searchFilter" value.bind="search.selectedFilter" change.trigger="search.filterChanged()">
-            <option selected disabled>select a filter</option>
-            <option>${search.options.none}</option>
-            <option>${search.options.any}</option>
-            <option>${search.options.id}</option>
-            <option>${search.options.value}</option>
-          </select>
-        </div>
-        <div class="col-md-4">
-          <label class="w3-label">Search Term</label>
-          <input class="w3-input" type="text" name="searchTerm" id="searchTerm" placeholder="" input.delegate="search.keyPressed()" value.bind="search.searchedValue" list = "filteredOptions"> 
-            <datalist id="filteredOptions" > <option repeat.for="row of search.filteredOptions" innerHTML.bind="row"></option> </datalist>
-        </div>
-        <div class="col-md-4">
-          <br>
-          <br>
-          <div if.bind="!search.noResult && !search.noSearchYet">Number of Search Results: ${search.numberOfResult}</div>
+        <div class="col-md-12">
+          <div if.bind="search.noResult" class="alert alert-danger" role="alert" innerHTML.bind="search.errorMessage"></div>
+          <div if.bind="search.noSearchYet" class="alert alert-info" role="alert" innerHTML.bind="search.suggestionMessage"></div>
         </div>
       </div>
     </div>
   </div>
-  <div class="container-fluid" if.bind="!search.noResult && !search.noSearchYet">
-    <a id="link" mouseover.delegate="search.doMouseOver({$index})" mouseout.delegate="search.doMouseOut()" ></a>
-    <table class="table table-striped table-bordered">
-      <thead>
-        <tr>
-          <th>Id</th>
-          <th>Value</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr repeat.for="row of search.rows" mouseover.delegate="search.doMouseOver({$index})" mouseout.delegate="search.doMouseOut({$index})" class="table-hover"
-          id="link" click.delegate="search.doOnClickJumpToCode({$index})"> 
-          <td innerHTML.bind="row.id"><a href="#link" click.delegate="search.doOnClickHighlight({$index})"></a></td>
-          <td innerHTML.bind="row.value"><a href="#link" click.delegate="search.doOnClickHighlight({$index})"></a></td>
-        </tr>
-      </tbody>
-    </table>
   </div>
-  <div class=" container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <div if.bind="search.noResult" class="alert alert-danger" role="alert" innerHTML.bind="search.errorMessage"></div>
-        <div if.bind="search.noSearchYet" class="alert alert-info" role="alert" innerHTML.bind="search.suggestionMessage"></div>
-      </div>
-      
-    </div>
-  </div>
-  </div>
-
-  <br>
 </template>
