--- a/src/visViewer/vis-viewer.html
+++ b/src/visViewer/vis-viewer.html
@@ -1,16 +1,23 @@
 <template bindable="vis">
     <require from="visualization/visualization.html"></require>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <button click.trigger="vis.showVis()" disabled.bind="!vis.showVisButton" class="btn btn-info active">show visualization</button>
-                <button click.trigger="vis.clearSelection()" if.bind="vis.showClearButton" class="btn btn-danger">clear selections</button>
-            </div>
+    <div class="panel panel-default">
+        <div class="panel-heading" data-toggle="collapse" href="#seePanelBody">
+                <span class='glyphicon glyphicon-dashboard'></span>Visualizations
         </div>
-    </div>
-    <div>
-        <div repeat.for="visualization of vis.visualizations">
-            <visualization vis.bind="visualization"></visualization>
+        <div id="seePanelBody" class="panel-body">
+            <div class="container-fluid">
+                <div class="row">
+                        <div class="col-md-12">
+                            <button click.trigger="vis.showVis()" disabled.bind="!vis.showVisButton" class="btn btn-info active">show visualization</button>
+                            <button click.trigger="vis.clearSelection()" if.bind="vis.showClearButton" class="btn btn-danger">clear selections</button>
+                        </div>
+                    </div>
+            </div>
+            <div>
+                <div repeat.for="visualization of vis.visualizations">
+                    <visualization vis.bind="visualization"></visualization>
+                </div>
+            </div>
         </div>
     </div>
 </template>
