--- a/src/chat/chat.html
+++ b/src/chat/chat.html
@@ -1,7 +1,7 @@
 <template bindable="chat">
 <require from="./chat.css"></require>
   <div id="chatDiv" class="seecoderun-chat" >
-    <header>Chat</header>
+    <header><span class='glyphicon glyphicon-comment'></span>Chat</header>
     <div id = 'chatToolbar' class='seecoderun-chat-toolbar'>
       <label for="chatUserNameInput">Username:</label>
       <input type='text' id='chatUserNameInput' placeholder='Enter Your Username...'>
@@ -9,6 +9,8 @@
     <ul id='chatMessages' ></ul>
     <footer>
       <input type='text' id='chatMessageInput' placeholder='Type Message Here...'>
+      <span id = "chatMessageFeedbackSent" class='glyphicon glyphicon-comment'></span>
+      <span id = "chatMessageFeedbackNotSent" class='glyphicon glyphicon-alert'></span>
     </footer>
   </div>
 </template>
