--- a/index.html
+++ b/index.html
@@ -2,24 +2,31 @@
 <html>
 	<head>
 		<title>SeeCode.Run</title>
-		<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-			
+		<link rel="stylesheet" href="styles/smoothness.jquery-ui.css">
+		<link rel="stylesheet" href="styles/googleapis.material.icons.css">
 		<link rel="stylesheet" href="styles/w3.css" />
-		<link rel="stylesheet" href="styles/styles.css">
-		
 		<link rel="stylesheet" href="styles/split.js.css" />
 		<link rel="stylesheet" href="styles/firepad-user-list.css" />
+		<link rel="stylesheet" href="styles/styles.css">
+		
+		<link rel="stylesheet" href="styles/index.css" />
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	
 	<body aurelia-app="main">
-		<div class="splash">
-			<div class="message">SeeCode.Run</div>
-			<i class="fa fa-spinner fa-spin"></i>
+		<div class="w3-card-4">
+			<header class="w3-container w3-blue">
+			  	<h1>Let's have some fun =]</h1>
+			</header>
+			<div class = "w3-container">
+				<div class="splash">
+					<div class="message">SeeCode.Run</div>
+					<i class="fa fa-spinner fa-spin"></i>
+				</div>
+			</div>
 			<footer class="w3-container w3-blue">
-			  <h5>&copy;George Mason University, 2016</h5>
+				  <h5>&copy; George Mason University, 2016</h5>
 			</footer>
 		</div>
 	
