--- a/src/share/share-box.html
+++ b/src/share/share-box.html
@@ -1,12 +1,12 @@
 <template bindable="share">
 <require from = "./share-box.css"></require>
-   <div id="shareDiv" class="share-box" style = "background-color: white;">
-        <div >
+   <div id="shareDiv" class="w3-card" >
+        <div class='w3-row w3-color-blue'>
               <header>Share Your SeeCode.Run Pastebin</header>
         </div>
         <div class='w3-row'>
-          <input type="text" class="w3-container w3-half form-control" id="copyTarget" value.bind="pastebinIdshare"><button type="button" class="btn btn-primary" id="copyButton">Copy</button>
+          <input type="text" class="w3-container w3-threequarter" id="copyTarget" value.bind="pastebinIdshare"><button type=" w3-row w3-button" class="btn btn-primary" id="copyButton">Copy</button>
         </div>
-        <br></br>
+        <!--<br></br>-->
    </div>
 </template>
