improved bundling. redesigned welcome screen. refactored ace themes. Material UI added to tabs.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,18 @@
 			</header>
 			<div class = "w3-container">
 				<div class="splash">
-					<div class="message">SeeCode.Run</div>
-					<i class="fa fa-spinner fa-spin"></i>
+					<div class="logo">
+				       <i class="material-icons md-giant">chevron_left</i>
+				       <i class="material-icons md-giant">cloud</i>
+				       <i class="material-icons md-giant">play_circle_outline</i>
+				       <i class="material-icons md-giant">chevron_right</i>
+			    	</div>
+			    	<div class="spinner-box">
+			    		<i class="fa fa-spinner fa-spin"></i>
+			    	</div>
+					<div class="title">
+						SeeCode.Run
+					</div>
 				</div>
 			</div>
 			<footer class="w3-container w3-blue">
