--- a/src/share/share-box.html
+++ b/src/share/share-box.html
@@ -1,6 +1,6 @@
 <template bindable="share">
 <require from = "./share-box.css"></require>
-   <div id="shareDiv" class="container-fluid">
+   <div id="shareDiv" class= "dropdown-menu">
         <div class='w3-row w3-color-blue'>
               <header>Share Your SeeCode.Run Pastebin</header>
         </div>
