--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,7 @@
 <require from="bootstrap/css/bootstrap.css"></require>
 <require from="font-awesome/css/font-awesome.css"></require>
 <require from="layout/navigationBar/navigation-bar.html"></require>
+<require from="./app.css"></require>
 
   <navigation-bar router.bind="router"></navigation-bar>
   <div class="page-host">
